Update MSAL authority to specific Tenant ID

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         const msalConfig = {
             auth: {
                 clientId: "a76e927f-3838-47dd-a400-502cb1cfe57d",
-                authority: "https://login.microsoftonline.com/common",
+                authority: "https://login.microsoftonline.com/fb6ed267-0587-4bca-8f76-c672df6eb313",
                 redirectUri: window.location.href
             },
             cache: { cacheLocation: "sessionStorage", storeAuthStateInCookie: false }
