--- a/index.html
+++ b/index.html
@@ -736,14 +736,7 @@
         };
 
         window.deleteChampionship = async function (champId, champName) {
-            const confirmed = prompt(`Biztosan törölni akarod a(z) "${champName}" bajnokságot?\nEz a művelet NEM vonható vissza!\nA törléshez írd be: TORLES`);
-
-            if (!confirmed) return; // Mégse gomb
-
-            // Megengedőbb ellenőrzés (kisbetű/nagybetű, felesleges szóköz, ékezet)
-            const s = confirmed.trim().toUpperCase();
-            if (s !== "TORLES" && s !== "TÖRLÉS") {
-                showMessage("Törlés megszakítva (helytelen megerősítő kód).", "error");
+            if (!confirm(`Biztosan törölni akarod a(z) "${champName}" bajnokságot?\nEz a művelet NEM vonható vissza!`)) {
                 return;
             }
 
